--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --loader ts-node/esm ./src/app.ts",
-    "start": "ts-node --transpile-only ./src/app.ts",
+    "start": "node ./dist/app.js",
     "lint": "eslint './src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix './src/**/*.{js,jsx,ts,tsx}'",
     "format": "prettier --check ./src",
@@ -14,7 +14,8 @@
     "tsc": "tsc"
   },
   "author": "Tomohiro Honda",
-  "license": "MIT",
+  "license": "UNLICENSED",
+  "private": true,
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/debug": "^4.1.7",
