--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "outDir": "./dist",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
   },
   // トランスパイル対象ディレクトリを指定する
   "include": [
