--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "debug": "^4.3.4",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3"
   }
 }
