--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,10 @@
   "root": true,
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "prettier"
+    "prettier",
+    "prettier/@typescript-eslint"
   ],
   "plugins": ["@typescript-eslint"],
   "env": {
