--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
@@ -32,7 +33,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3"
   }
