--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
   }
 }
